@@ -6,18 +6,18 @@ import it.webformat.ticketsystem.data.models.Comments;
 import it.webformat.ticketsystem.data.models.Employee;
 import it.webformat.ticketsystem.data.models.Labour;
 import it.webformat.ticketsystem.data.models.Project;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import it.webformat.ticketsystem.enums.TaskStatus;
+import lombok.*;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static it.webformat.ticketsystem.utility.DataConversionUtils.stringToLong;
 
-@Data
+@Getter
+@Setter
 @AllArgsConstructor
 @NoArgsConstructor
 @Builder
@@ -26,6 +26,7 @@ public class LabourDto implements Dto {
     private Long id;
     private String desc;
     private String deadline;
+    private TaskStatus taskStatus;
     private List<EmployeeDto> employeeDtoList;
     private String projectId;
     @JsonIgnore
@@ -37,7 +38,8 @@ public class LabourDto implements Dto {
         List<Comments> commentsList;
         if (!(commentsDtoList == null)) {
             commentsList = commentsDtoList.stream()
-                    .map(CommentsDto::toModel).toList();
+                    .map(CommentsDto::toModel)
+                    .collect(Collectors.toList());
         } else {
             commentsList = new ArrayList<>();
         }
@@ -45,7 +47,8 @@ public class LabourDto implements Dto {
         List<Employee> employeeList;
         if (!(employeeDtoList == null)) {
             employeeList = employeeDtoList.stream()
-                    .map(EmployeeDto::toModel).toList();
+                    .map(EmployeeDto::toModel)
+                    .collect(Collectors.toList());
         } else {
             employeeList = new ArrayList<>();
         }
@@ -58,6 +61,7 @@ public class LabourDto implements Dto {
                 .employeeList(employeeList)
                 .project(Project.builder().id(stringToLong(projectId)).build())
                 .commentsList(commentsList)
+                .taskStatus(taskStatus)
                 .build();
     }
 }
